vlib/v/checker/tests/if_diff_expected_type_err.out
vlib/v/checker/tests/if_diff_expected_type_err.vv:5:11: error: mismatched types `&[]rune` and `[]rune`
    3 | 
    4 | fn main() {
    5 |     runes := if true { &some_runes } else { some_other_runes }
      |              ~~
    6 |     println(runes)
    7 | }
